Closed Bug 345670 Opened 18 years ago Closed 18 years ago

Crash in typeaheadfind [@ nsTypeAheadFind::RangeStartsInsideLink 0393f10a]

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: iannbugzilla, Assigned: ispiked)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(2 files, 1 obsolete file)

Not 100% sure how I triggered this but was cutting and pasting between various bugzilla windows when I crashed with TB21266540E
Seems to be caused by http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp&mark=1652&rev=#1652
which was changed by bug 344050
Summary: Crash in typeaheadfind [nsTypeAheadFind::RangeStartsInsideLink 0393f10a] → Crash in typeaheadfind [@ nsTypeAheadFind::RangeStartsInsideLink 0393f10a]
Can we just put back the null check for |parentsFirstChild| that existed before?

Incident ID: 21266540
Stack Signature	nsTypeAheadFind::RangeStartsInsideLink 0393f10a
Product ID	MozillaTrunk
Build ID	2006072209
Trigger Time	2006-07-23 04:29:39.0
Platform	Win32
Operating System	Windows NT 5.1 build 2600
Module	typeaheadfind.dll + (00003b3f)
URL visited	
User Comments	Editting bug in bugzilla
Since Last Crash	1145 sec
Total Uptime	1145 sec
Trigger Reason	Access violation
Source File, Line No.	c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp, line 1652
Stack Trace 	
nsTypeAheadFind::RangeStartsInsideLink  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp, line 1652]
nsTypeAheadFind::FindItNow  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp, line 1331]
nsTypeAheadFind::HandleChar  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp, line 972]
nsTypeAheadFind::KeyPress  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp, line 726]
DispatchToInterface  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventListenerManager.cpp, line 145]
nsEventListenerManager::HandleEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventListenerManager.cpp, line 1742]
nsEventTargetChainItem::HandleEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 356]
nsEventTargetChainItem::HandleEventTargetChain  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 456]
nsEventTargetChainItem::HandleEventTargetChain  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 486]
nsEventDispatcher::Dispatch  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/content/events/src/nsEventDispatcher.cpp, line 643]
PresShell::HandleEventInternal  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 6277]
PresShell::HandleEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/layout/base/nsPresShell.cpp, line 6048]
nsViewManager::HandleEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsViewManager.cpp, line 1665]
nsViewManager::DispatchEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsViewManager.cpp, line 1618]
HandleEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/view/src/nsView.cpp, line 174]
nsWindow::DispatchEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 1102]
nsWindow::DispatchKeyEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 3331]
nsWindow::OnChar  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 3614]
nsWindow::OnKeyDown  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 3437]
nsWindow::ProcessMessage  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 4455]
nsWindow::WindowProc  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsWindow.cpp, line 1291]
USER32.dll + 0x8734 (0x77d48734)
USER32.dll + 0x8816 (0x77d48816)
USER32.dll + 0x89cd (0x77d489cd)
USER32.dll + 0x8a10 (0x77d48a10)
nsAppShell::ProcessNextNativeEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/windows/nsAppShell.cpp, line 154]
nsBaseAppShell::DoProcessNextNativeEvent  [c:/builds/tinderbox/MozillaTrunk/WINNT_5.0_Clobber/mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp, line 137]
0xc0850845
Severity: major → critical
Keywords: stackwanted
Attachment #230451 - Flags: superreview?(bugmail)
Attachment #230451 - Flags: review?(bugmail)
Comment on attachment 230451 [details] [diff] [review]
add back the null check

Thanks for fixing this. r/sr=sicking
Attachment #230451 - Flags: superreview?(bugmail)
Attachment #230451 - Flags: superreview+
Attachment #230451 - Flags: review?(bugmail)
Attachment #230451 - Flags: review+
Whiteboard: [checkin needed]
Assignee: general → ispiked
Attached patch same patch for toolkit/ (obsolete) — Splinter Review
Attachment #230642 - Flags: superreview?(bugmail)
Attachment #230642 - Flags: review?(bugmail)
Comment on attachment 230642 [details] [diff] [review]
same patch for toolkit/

>-    // We don't want to look at a whitespace-only first child
>-    if (parentsFirstChild->TextIsOnlyWhitespace()) {
>-      parentsFirstChild = parent->GetChildAt(1);
>+    if (parentsFirstChild) {
>+      // We don't want to look at a whitespace-only first child
>+      if (parentsFirstChild->TextIsOnlyWhitespace()) {
>+        parentsFirstChild = parent->GetChildAt(1);
>+      }

Please do like you did in the last patch and use a single if-statement with an &&

r/sr=sicking with that.
Attachment #230642 - Flags: superreview?(bugmail)
Attachment #230642 - Flags: superreview+
Attachment #230642 - Flags: review?(bugmail)
Attachment #230642 - Flags: review+
Attachment #230642 - Attachment is obsolete: true
Attachment #230658 - Flags: superreview+
Attachment #230658 - Flags: review+
mozilla/toolkit/components/typeaheadfind/src/nsTypeAheadFind.cpp 	1.25
mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp 	1.119
Status: NEW → RESOLVED
Closed: 18 years ago
OS: Windows XP → All
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Crash Signature: [@ nsTypeAheadFind::RangeStartsInsideLink 0393f10a]
More About the Concept of an Afterlife: The only part of you that could in any way survive into an afterlife would have to be an immaterial part of you since when you snuff it, your material remains go nowhere. But any immaterial part of you would have no sensory apparatus so how could you enjoy an afterlife when you couldn't experience it? On the other hand, if your life is but a computer simulation, then equally so could your afterlife be another simulation. One software program ends (death) and another begins (afterlife).  http://howtotakescreenshotpro.com/
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: