Bug 345670: fix crash in nsTypeAheadFind::RangeStartsInsideLink, patch by Adam Guthrie <ispiked@gmail.com>, r+sr=sicking