extensions/typeaheadfind/src/nsTypeAheadFind.cpp
@@ -1649,7 +1649,7 @@ nsTypeAheadFind::RangeStartsInsideLink(nsIDOMRange *aRange,
     if (parent) {
       nsIContent *parentsFirstChild = parent->GetChildAt(0);
       // We don't want to look at a whitespace-only first child
-      if (parentsFirstChild->TextIsOnlyWhitespace())
+      if (parentsFirstChild && parentsFirstChild->TextIsOnlyWhitespace())
         parentsFirstChild = parent->GetChildAt(1);
 
       if (parentsFirstChild != startContent) {
